--- a/src/styles/sass/admin/user.scss
+++ b/src/styles/sass/admin/user.scss
@@ -73,10 +73,6 @@
       align-items: center;
       position: relative;
 
-      &:has(.sign-up) {
-        padding: 8px 16px;
-      }
-
       @media (max-width: 768px) {
         width: fit-content;
         padding: 4px 10px 4px 38px;
@@ -186,13 +182,24 @@
       .#{$identifier}-user-name {
         width: auto;
         margin-bottom: 16px;
+        padding: 6px 12px 6px 14px;
+        text-align: center;
+        letter-spacing: normal;
+
+        a {
+          font-size: small;
+          padding: 0;
+        }
       }
     }
 
     .#{$identifier}-user-sign {
       width: 100%;
       justify-content: space-between;
-      font-size: small;
+
+      a {
+        font-size: small;
+      }
       font a {
         font-size: 14px;
         svg {
